--- a/Example/Example.csproj
+++ b/Example/Example.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Dapper.GraphQL\Dapper.GraphQL\Dapper.GraphQL.csproj" />
+  </ItemGroup>
+
 </Project>
